# neural-networks-cpp

./: .gitignore  CMakeLists.txt  README.md  vagrind_check.sh
apps/: CMakeLists.txt  neural-networks.cpp
docs/: CMakeLists.txt
include/: image.hpp  math.hpp
src/: CMakeLists.txt  image.cpp  math.cpp
tests/: CMakeLists.txt  image-tests.cpp  math-tests.cpp
